<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidStudyTools</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AndroidStudyTools</string>

    <!-- TextView set error -->
    <string name="textview_seterror">1. TextView setError</string>
    <string name="title_activity_set_error">SetErrorStudyTool</string>
    <string name="button_submit">Submit</string>
    <string name="empty_input_tips">Text can not be empty!</string>

    <!-- Get device info -->
    <string name="get_device_info">2. Get device info</string>
    <string name="title_activity_get_device_info">GetDeviceInfoActivity</string>
    <string name="model">Model: %1$s</string>
    <string name="brand">Brand: %1$s</string>
    <string name="name">Name: %1$s</string>
    <string name="device">Device: %1$s</string>
    <string name="manufacturer">Manufacturer: %1$s</string>
    <string name="resolution">Screen Resolution Width: %1$d, Height: %2$d</string>

    <!-- List progress and menu -->
    <string name="list_progress">3. List include progress item</string>
    <string name="title_activity_list_progress">ListProgressActivity</string>
    <string name="loading">Loading...</string>

    <!-- Speech recognize -->
    <string name="speech_recognize">4. Speech recognize</string>
    <string name="title_activity_speech_recognize">SpeechRecognizeActivity</string>
    <string name="find">find</string>
    <string name="waiting_for_input">Waiting for input</string>
    <string name="no_voice_search_title">Notice</string>
    <string name="no_voice_search_msg">The speech recognize function need Google Voice Search to support, do you want to download now?</string>
    <string name="no_voice_search_cancel">Cancel</string>
    <string name="no_voice_search_download">Download</string>
    <string name="no_market_title">No App Store</string>
    <string name="no_market_msg">You cellphone isn\'t install any app store to handle the request. Do you want to download it through browser?</string>
    <string name="no_market_cancel">Cancel</string>
    <string name="no_market_download">Download through browser</string>

    <!-- Nfc reader -->
    <string name="nfc_reader">5. Nfc reader</string>
    <string name="title_activity_nfc_reader">NfcReaderActivity</string>
    <string name="info">scanning...</string>
    <string name="no_support_nfc">This device can not support nfc function.</string>
    <string name="nfc_disable">Please turn on NFC.</string>

    <!-- TabBar -->
    <string name="tab_bar">6. Activity Tab</string>
    <string name="title_activity_tab_bar">TabBarActivity</string>
    <string name="tab1">Tab1</string>
    <string name="tab2">Tab2</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_second">SecondActivity</string>

    <!-- TabActivity -->
    <string name="tab_activity">7. Tab Activity Test</string>
    <string name="title_activity_tab_activity_test">TabActivityTest</string>

    <!-- Workspace -->
    <string name="workspace">8. Workspace</string>
    <string name="title_activity_ws">WSActivity</string>

    <!-- List insert -->
    <string name="list_insert">9. List insert</string>
    <string name="title_activity_list_insert">ListInsertActivity</string>
    <string name="insert_from_header">Insert from header</string>
    <string name="insert_from_footer">Insert from footer</string>

    <!-- ViewPager -->
    <string name="viewpager">10. ViewPager</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>

    <!-- ActionBar -->
    <string name="actionbar">11. ActionBar</string>
    <string name="title_activity_action_bar">ActionBar</string>
    
    <!-- WebView -->
    <string name="webview">12. WebView</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="submit">Enter</string>
    
    <!-- Capture -->
    <string name="capture">13. Capture</string>
    <string name="title_activity_capture">CaptureActivity</string>
    
    <!-- Text for Capture -->
    <string name="msg_default_format">Format</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_not_valid_web_address">Not a valid web address!</string>
    <!-- End -->

</resources>